tests/compile_fail/invalid-impl.stderr
error: expected one of `!` or `::`, found `}`
 --> $DIR/invalid-impl.rs:8:1
  |
6 | impl Foo {
  |          - while parsing this item list starting here
7 |     x
  |      - expected one of `!` or `::`
8 | }
  | ^
  | |
  | unexpected token
  | the item list ends here

error: invalid impl block for #[delegate]
 --> $DIR/invalid-impl.rs:6:1
  |
6 | impl Foo {
  | ^^^^
